syntax = "proto3";
package sum;

message Arguments{
	int32 firstNum= 1;
	int32 secondNum= 2;
}
message SumRequest {
	Arguments args =1;
}
message SumResponse {
	string res =1;
}

service SumService{
	rpc Sum (SumRequest) returns (SumResponse){}
}